# garage-ai

./: .firebaserc  .gitignore  README.md  firebase.json  firestore.indexes.json  firestore.rules
.github/workflows/: backend-deploy.yml  firestore-deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  config.py  firestore.py  main.py  mcp_server.py
backend/app/models/: __init__.py  customer.py  invoice.py  product.py  supplier.py
backend/app/routers/: customers.py  health.py  invoices.py  orgs.py  products.py  public.py  reports.py  suppliers.py  zalo.py
backend/app/services/: AGENT_PROMPT.md  access_requests.py  agent.py  audit.py  auth_tokens.py  conversation.py  customers.py  inventory.py  invoice_pdf.py  invoice_read.py  invoices.py  onboarding.py  orgs.py  pdf_tokens.py  previews.py  reports.py  suppliers.py  upload_tokens.py  zalo_attachments.py  zalo_client.py  zalo_users.py
backend/scripts/: api_smoke.sh  migrate_to_multi_tenant.py  set_role.py  setup_zalo_webhook.py
backend/tests/: conftest.py  test_api_immutability.py  test_auth_tokens.py  test_invoices.py  test_onboarding.py  test_pdf_tokens.py  test_previews.py  test_products.py  test_public_auth.py  test_public_pdf.py  test_require_org_id.py  test_upload_tokens.py  test_zalo_attachments.py
docs/: DEPLOY.md  MULTI_TENANT.md  OPENCLAW_PROMPT.md  RESUME.md
frontend/: apphosting.yaml  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: Nav.tsx  (+2 more)
(+21 files in other folders)
